# task_managment_api

./: .env_example  .gitignore  Makefile  README.md  docker-compose.yml  dockerfile  pyproject.toml
src/auth/: admin.py  apps.py  authentication.py  models.py
src/auth/migrations/: 0001_initial.py
src/project/: settings.py  urls.py
src/tasks/: admin.py  apps.py  documents.py  filters.py  models.py  serializers.py  urls.py  views.py
src/tasks/migrations/: 0001_initial.py
